Projects/LuxeCart/LuxeCart_v1/luxecart-k8s/Kubernetes/ingres/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: luxe-backend
spec:
  ingressClassName: nginx

  rules:
  - host: api.luxecart.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 3000
