Projects/LuxeCart/LuxeCart_v1/luxecart-k8s/Kubernetes/ingres/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: luxe-frontend
spec:
  ingressClassName: nginx

  rules:

  - host: frontend.luxecart.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
