Projects/LuxeCart/LuxeCart_v1/luxecart-k8s/Kubernetes/ingres/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: luxe-observability
spec:
  ingressClassName: nginx

  rules:
  - host: grafana.luxecart.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
