Projects/LuxeCart/LuxeCart_v1/luxecart-k8s/Kubernetes/ingres/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: luxe-observability
spec:
  ingressClassName: nginx

  rules:
  - host: prometheus.luxecart.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
